[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/PickableList.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SearchLine.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HideButton.gd" type="Script" id=3]
[ext_resource path="res://Editors/PersonEditor.gd" type="Script" id=4]
[ext_resource path="res://UI/Fonts/MainEditorFontBold.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/ScrollablePopupMenu.tscn" type="PackedScene" id=6]

[node name="PersonEditor" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="EditZone" type="VBoxContainer" parent="."]
margin_right = 854.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="PersonLine" type="HBoxContainer" parent="EditZone"]
margin_right = 854.0
margin_bottom = 21.0

[node name="PersonName" type="Label" parent="EditZone/PersonLine"]
margin_top = 3.0
margin_right = 366.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "SOME_PERSON_ID_NAME"
align = 1

[node name="VSeparator" type="VSeparator" parent="EditZone/PersonLine"]
margin_left = 370.0
margin_right = 374.0
margin_bottom = 21.0

[node name="Label3" type="Label" parent="EditZone/PersonLine"]
margin_left = 378.0
margin_top = 3.0
margin_right = 483.0
margin_bottom = 18.0
text = "Settings for langluge:"
align = 1

[node name="LocaleMenu" parent="EditZone/PersonLine" instance=ExtResource( 6 )]
margin_left = 487.0
margin_right = 854.0
size_flags_horizontal = 3

[node name="Settings" type="VBoxContainer" parent="EditZone"]
margin_top = 25.0
margin_right = 854.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="PersonMain" type="PanelContainer" parent="EditZone/Settings"]
margin_right = 854.0
margin_bottom = 134.0
size_flags_horizontal = 3

[node name="Settings" type="VBoxContainer" parent="EditZone/Settings/PersonMain"]
margin_left = 7.0
margin_top = 7.0
margin_right = 847.0
margin_bottom = 127.0

[node name="ShortShow" type="Label" parent="EditZone/Settings/PersonMain/Settings"]
visible = false
margin_right = 734.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="PersonData" type="GridContainer" parent="EditZone/Settings/PersonMain/Settings"]
margin_right = 840.0
margin_bottom = 87.0
rect_min_size = Vector2( 200, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="Label2" type="Label" parent="EditZone/Settings/PersonMain/Settings/PersonData"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 20.0
text = "Name in dialog:"
align = 1

[node name="LocaleName" type="LineEdit" parent="EditZone/Settings/PersonMain/Settings/PersonData"]
margin_left = 87.0
margin_right = 840.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "PersonName"
align = 1

[node name="Label" type="Label" parent="EditZone/Settings/PersonMain/Settings/PersonData"]
margin_top = 38.0
margin_right = 77.0
margin_bottom = 53.0
text = "Defalut font:"
align = 1

[node name="FontMenu" parent="EditZone/Settings/PersonMain/Settings/PersonData" instance=ExtResource( 6 )]
margin_left = 87.0
margin_top = 35.0
margin_right = 840.0
margin_bottom = 56.0

[node name="Label4" type="Label" parent="EditZone/Settings/PersonMain/Settings/PersonData"]
margin_top = 69.0
margin_right = 77.0
margin_bottom = 84.0
text = "Defalut align:"
align = 1

[node name="AlignMenu" parent="EditZone/Settings/PersonMain/Settings/PersonData" instance=ExtResource( 6 )]
margin_left = 87.0
margin_top = 66.0
margin_right = 840.0
margin_bottom = 87.0

[node name="HSeparator" type="HSeparator" parent="EditZone/Settings/PersonMain/Settings"]
margin_top = 91.0
margin_right = 840.0
margin_bottom = 95.0

[node name="HideButton" type="Button" parent="EditZone/Settings/PersonMain/Settings"]
margin_top = 99.0
margin_right = 840.0
margin_bottom = 120.0
text = "Hide Person Info"
script = ExtResource( 3 )
hide_node = NodePath("../PersonData")
replace_node = NodePath("../ShortShow")
on_hide_text = "Show Person Info"
on_show_text = "Hide Person Info"

[node name="HSeparator" type="HSeparator" parent="EditZone/Settings"]
margin_top = 138.0
margin_right = 854.0
margin_bottom = 142.0

[node name="MoodPanel" type="PanelContainer" parent="EditZone/Settings"]
visible = false
margin_top = 146.0
margin_right = 748.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Moods" type="VBoxContainer" parent="EditZone/Settings/MoodPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 741.0
margin_bottom = 422.0
size_flags_horizontal = 3

[node name="SearchLine" parent="EditZone/Settings/MoodPanel/Moods" instance=ExtResource( 2 )]
margin_right = 734.0
margin_bottom = 25.0

[node name="HSeparator2" type="HSeparator" parent="EditZone/Settings/MoodPanel/Moods"]
margin_top = 29.0
margin_right = 734.0
margin_bottom = 33.0

[node name="Buttons" type="HBoxContainer" parent="EditZone/Settings/MoodPanel/Moods"]
margin_top = 37.0
margin_right = 734.0
margin_bottom = 58.0

[node name="GroupList" parent="EditZone/Settings/MoodPanel/Moods/Buttons" instance=ExtResource( 6 )]
margin_right = 587.0
size_flags_horizontal = 3

[node name="AddBt" type="Button" parent="EditZone/Settings/MoodPanel/Moods/Buttons"]
margin_left = 591.0
margin_right = 654.0
margin_bottom = 21.0
text = "Add Group"

[node name="DeleteBt" type="Button" parent="EditZone/Settings/MoodPanel/Moods/Buttons"]
margin_left = 658.0
margin_right = 734.0
margin_bottom = 21.0
text = "Delete Group"

[node name="HSeparator3" type="HSeparator" parent="EditZone/Settings/MoodPanel/Moods"]
margin_top = 62.0
margin_right = 734.0
margin_bottom = 66.0

[node name="Scroll" type="ScrollContainer" parent="EditZone/Settings/MoodPanel/Moods"]
margin_top = 70.0
margin_right = 734.0
margin_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MoodList" type="HFlowContainer" parent="EditZone/Settings/MoodPanel/Moods/Scroll"]
margin_right = 734.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="EditZone/Settings/MoodPanel/Moods"]
margin_top = 386.0
margin_right = 734.0
margin_bottom = 390.0

[node name="AddBts" type="HBoxContainer" parent="EditZone/Settings/MoodPanel/Moods"]
margin_top = 394.0
margin_right = 734.0
margin_bottom = 415.0
custom_constants/separation = 10

[node name="AddMoodBt" type="Button" parent="EditZone/Settings/MoodPanel/Moods/AddBts"]
margin_right = 362.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Add one mood..."

[node name="AddMoodsMassBt" type="Button" parent="EditZone/Settings/MoodPanel/Moods/AddBts"]
margin_left = 372.0
margin_right = 734.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Add several moods..."

[node name="HideButton" type="Button" parent="."]
margin_left = 858.0
margin_right = 870.0
margin_bottom = 600.0
script = ExtResource( 3 )
hide_node = NodePath("../PersonList")
on_hide_text = "<"
on_show_text = ">"

[node name="PersonList" parent="." instance=ExtResource( 1 )]
margin_left = 874.0
margin_right = 1024.0
margin_bottom = 600.0
button_suffix = "person"

[connection signal="item_selected" from="EditZone/PersonLine/LocaleMenu" to="." method="_on_LocaleMenu_item_selected"]
[connection signal="text_changed" from="EditZone/Settings/PersonMain/Settings/PersonData/LocaleName" to="." method="_on_LocaleName_text_changed"]
[connection signal="item_selected" from="EditZone/Settings/PersonMain/Settings/PersonData/FontMenu" to="." method="_on_FontMenu_item_selected"]
[connection signal="item_selected" from="EditZone/Settings/PersonMain/Settings/PersonData/AlignMenu" to="." method="_on_AlignMenu_item_selected"]
[connection signal="item_selected" from="EditZone/Settings/MoodPanel/Moods/Buttons/GroupList" to="." method="_on_GroupList_item_selected"]
[connection signal="pressed" from="EditZone/Settings/MoodPanel/Moods/Buttons/AddBt" to="." method="_on_AddBt_pressed"]
[connection signal="pressed" from="EditZone/Settings/MoodPanel/Moods/Buttons/DeleteBt" to="." method="_on_DeleteBt_pressed"]
[connection signal="pressed" from="EditZone/Settings/MoodPanel/Moods/AddBts/AddMoodBt" to="." method="_on_AddMoodBt_pressed"]
[connection signal="pressed" from="EditZone/Settings/MoodPanel/Moods/AddBts/AddMoodsMassBt" to="." method="_on_AddMoodsMassBt_pressed"]
[connection signal="add_item_request" from="PersonList" to="." method="_on_PersonList_add_item_request"]
[connection signal="delete_item_request" from="PersonList" to="." method="_on_PersonList_delete_item_request"]
[connection signal="item_selected" from="PersonList" to="." method="_on_PersonList_item_selected"]
[connection signal="rename_item_request" from="PersonList" to="." method="_on_PersonList_rename_item_request"]
